# video-kafka-pipeline

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
browser-history-kafka-stats/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
browser-history-kafka-stats/data/: sample_history.csv
browser-history-kafka-stats/docs/: report.md
browser-history-kafka-stats/scripts/: export_chromium_history.py
browser-history-kafka-stats/shared/: history.py  kafka_admin.py  printing.py
logs/: determinism_compare.txt  track_counts_15fps.tsv  track_counts_2streams_15fps.tsv  track_counts_2streams_15fps_after_fix.tsv
model_repository/yolo_tracker/: config.pbtxt
services/: __init__.py
services/detections_console/: __init__.py  main.py
services/frame_consumer/: __init__.py  main.py  triton_client.py  video_renderer.py  worker_pool.py
services/frame_producer/: __init__.py  main.py
services/stats_service/: main.py
services/tracking_visualizer/: main.py
shared/: __init__.py  config.py  image_utils.py  kafka_utils.py  schemas.py
video-kafka-throughput-lab/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
video-kafka-throughput-lab/experiments/: required_experiments.yaml
video-kafka-throughput-lab/kafka_lab/: __init__.py  aggregate_report.py  common.py  consumer_service.py  generator_service.py  image_utils.py  kafka_utils.py  plot_report.py  prepare_dataset.py  run_experiments.py  topic_admin.py
video-kafka-throughput-lab/report/: report.md  summary.csv
(+3 files in other folders)
